--- a/html_css/css/posts.css
+++ b/html_css/css/posts.css
@@ -32,7 +32,6 @@
     color: rgb(114, 114, 114);
     text-transform: uppercase;
     font-weight: 900;
-    white-space: nowrap;
 }
 
 .post-content {
